fix: update image paths from absolute to relative for proper loading

--- a/index.html
+++ b/index.html
@@ -160,15 +160,15 @@
               <div class="slider-wrapper overflow-hidden">
                 <div id="slider-track" class="flex transition-transform duration-300 ease-out">
                   <div class="slide flex items-center min-w-full">
-                    <img class="object-contain w-full max-h-[60vh] md:max-h-[70vh]" src="/images/paralleles-dips1.jpeg"
+                    <img class="object-contain w-full max-h-[60vh] md:max-h-[70vh]" src="./images/paralleles-dips1.jpeg"
                       alt="Parallele Dips 1" />
                   </div>
                   <div class="slide flex items-center min-w-full">
-                    <img class="object-contain w-full max-h-[60vh] md:max-h-[70vh]" src="/images/paralleles-dips2.jpeg"
+                    <img class="object-contain w-full max-h-[60vh] md:max-h-[70vh]" src="./images/paralleles-dips2.jpeg"
                       alt="Parallele Dips 2" />
                   </div>
                   <div class="slide flex items-center min-w-full">
-                    <img class="object-contain w-full max-h-[60vh] md:max-h-[70vh]" src="/images/paralleles-dips3.jpeg"
+                    <img class="object-contain w-full max-h-[60vh] md:max-h-[70vh]" src="./images/paralleles-dips3.jpeg"
                       alt="Parallele Dips 2" />
                   </div>
                 </div>
@@ -297,15 +297,15 @@
               <div class="slider-wrapper overflow-hidden">
                 <div id="slider-track-2" class="flex transition-transform duration-300 ease-out">
                   <div class="slide flex items-center min-w-full">
-                    <img class="object-contain w-full max-h-[60vh] md:max-h-[70vh]" src="/images/statics-bar1.jpeg"
+                    <img class="object-contain w-full max-h-[60vh] md:max-h-[70vh]" src="./images/statics-bar1.jpeg"
                       alt="Parallele Dips 1" />
                   </div>
                   <div class="slide flex items-center min-w-full">
-                    <img class="object-contain w-full max-h-[60vh] md:max-h-[70vh]" src="/images/statics-bar2.jpeg"
+                    <img class="object-contain w-full max-h-[60vh] md:max-h-[70vh]" src="./images/statics-bar2.jpeg"
                       alt="Parallele Dips 1" />
                   </div>
                   <div class="slide flex items-center min-w-full">
-                    <img class="object-contain w-full max-h-[60vh] md:max-h-[70vh]" src="/images/statics-bar3.jpeg"
+                    <img class="object-contain w-full max-h-[60vh] md:max-h-[70vh]" src="./images/statics-bar3.jpeg"
                       alt="Parallele Dips 1" />
                   </div>
                 </div>
@@ -434,15 +434,15 @@
               <div class="slider-wrapper overflow-hidden">
                 <div id="slider-track-3" class="flex transition-transform duration-300 ease-out">
                   <div class="slide flex items-center min-w-full">
-                    <img class="object-contain w-full max-h-[60vh] md:max-h-[70vh]" src="/images/parallettes1.jpeg"
+                    <img class="object-contain w-full max-h-[60vh] md:max-h-[70vh]" src="./images/parallettes1.jpeg"
                       alt="Parallele Dips 1" />
                   </div>
                   <div class="slide flex items-center min-w-full">
-                    <img class="object-contain w-full max-h-[60vh] md:max-h-[70vh]" src="/images/parallettes2.jpg"
+                    <img class="object-contain w-full max-h-[60vh] md:max-h-[70vh]" src="./images/parallettes2.jpg"
                       alt="Parallele Dips 2" />
                   </div>
                   <div class="slide flex items-center min-w-full">
-                    <img class="object-contain w-full max-h-[60vh] md:max-h-[70vh]" src="/images/parallettes3.jpg"
+                    <img class="object-contain w-full max-h-[60vh] md:max-h-[70vh]" src="./images/parallettes3.jpg"
                       alt="Parallele Dips 2" />
                   </div>
                 </div>
